--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -50,7 +50,10 @@
                                 <a class="nav-link" href="Back-end.html">Back-end technology</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Profit Analysis</a>
+                                <a class="nav-link" href="Business-plan.html">Business plan</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Platform-Progress.html">Platform progress</a>
                             </li>
                         </ul>
                         <!-- 下载框 -->
@@ -79,7 +82,7 @@
                             few seconds.
                         </p>
 
-                        <div class="pt-3 pt-sm-5 d-flex align-items-center action-buttons">
+                        <!-- <div class="pt-3 pt-sm-5 d-flex align-items-center action-buttons">
                             <a href='#section-download' class="btn btn-primary" data-bs-toggle="smooth-scroll">Scan QR
                                 code</a>
 
@@ -92,7 +95,7 @@
                                     <span class="fw-semibold">Watch Video</span>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-lg-4 offset-lg-2 text-end">
                         <div class="position-relative">
@@ -113,7 +116,7 @@
                                                     <img src="./assets/images/avatars/img-6.jpg" alt=""
                                                         class="img-fluid avatar-sm rounded-circle align-self-center me-3">
                                                     <div class="flex-grow-1 fs-14 text-muted">This app is blessing for
-                                                        all professionals!
+                                                        all users!
                                                         <p class="mb-0">
                                                             <span class="ms-0">
                                                                 <i data-feather="star"
@@ -139,8 +142,7 @@
                                                 <div class="d-flex">
                                                     <img src="./assets/images/avatars/img-8.jpg" alt=""
                                                         class="img-fluid avatar-sm rounded-circle align-self-center me-3">
-                                                    <div class="flex-grow-1 fs-14 text-muted">Very convenient to use
-                                                        project manager!
+                                                    <div class="flex-grow-1 fs-14 text-muted">Very convenient to use!
                                                         <p class="mb-0">
                                                             <span class="ms-0">
                                                                 <i data-feather="star"
@@ -199,9 +201,7 @@
                         <!-- <div class="shape2"></div> -->
                         <div class="card-body text-center py-0">
                             <h3 class="fw-semibold mt-0">Competition</h3>
-                            <p class="fs-14">
-                                xxxxxxxx
-                            </p>
+
 
                             <div class="px-2 mt-3">
                                 <img src="./assets/images/features/competition.png" alt="" class="img-fluid mt-2" />
@@ -216,10 +216,7 @@
                         <!-- <div class="shape4"></div> -->
                         <div class="card-body text-center py-0">
                             <h3 class="fw-semibold mt-0">Shop</h3>
-                            <p class="fs-14">
-                                xxxxx
 
-                            </p>
 
                             <div class="px-2 mt-3">
                                 <img src="./assets/images/features/shop.png" alt="" class="img-fluid mt-2" />
@@ -234,9 +231,7 @@
                         <!-- <div class="shape6"></div> -->
                         <div class="card-body text-center py-0">
                             <h3 class="fw-semibold mt-0">Community</h3>
-                            <p class="fs-14">
-                                xxxxx
-                            </p>
+
 
                             <div class="px-2 mt-3">
                                 <img src="./assets/images/features/discuss.png" alt="" class="img-fluid mt-2" />
