--- a/Front-end.html
+++ b/Front-end.html
@@ -88,10 +88,10 @@
             <div class="col text-center">
                 <span class="badge rounded-pill badge-soft-primary px-2 py-1">Home</span>
                 <h1 class="display-5 fw-semibold">The Facade of our WeChat applet</h1>
-                <p class="text-muted mx-auto">
+                <!-- <p class="text-muted mx-auto">
                     xxx<span class="text-primary fw-bold">
                     </span>
-                </p>
+                </p> -->
             </div>
         </div>
         <div style="display: flex; justify-content: center; gap: 60px; margin-top: 60px; flex-wrap: wrap;">
@@ -113,11 +113,11 @@
         <div class="row">
             <div class="col text-center">
                 <span class="badge rounded-pill badge-soft-primary px-2 py-1">Competition</span>
-                <h1 class="display-5 fw-semibold">Our WeChat applet has a wide range of functions</h1>
-                <p class="text-muted mx-auto">
+                <h1 class="display-5 fw-semibold">Various exciting competitions, you can participate and vote</h1>
+                <!-- <p class="text-muted mx-auto">
                     xxx<span class="text-primary fw-bold">
                     </span>
-                </p>
+                </p> -->
             </div>
         </div>
         <div style="display: flex; justify-content: center; gap: 60px; margin-top: 60px; flex-wrap: wrap;">
@@ -153,11 +153,12 @@
         <div class="row">
             <div class="col text-center">
                 <span class="badge rounded-pill badge-soft-primary px-2 py-1">Shop</span>
-                <h1 class="display-5 fw-semibold">Our WeChat applet has a wide range of functions</h1>
-                <p class="text-muted mx-auto">
+                <h1 class="display-5 fw-semibold">A wide range of cultural and creative products for you to choose from
+                </h1>
+                <!-- <p class="text-muted mx-auto">
                     xxx <span class="text-primary fw-bold">
                     </span>
-                </p>
+                </p> -->
             </div>
         </div>
         <div style="display: flex; justify-content: center; gap: 60px; margin-top: 60px; flex-wrap: wrap;">
@@ -193,11 +194,11 @@
         <div class="row">
             <div class="col text-center">
                 <span class="badge rounded-pill badge-soft-primary px-2 py-1">Community</span>
-                <h1 class="display-5 fw-semibold">Our WeChat applet has a wide range of functions</h1>
-                <p class="text-muted mx-auto">
+                <h1 class="display-5 fw-semibold">Find people who share your passion for culture</h1>
+                <!-- <p class="text-muted mx-auto">
                     xxx<span class="text-primary fw-bold">
                     </span>
-                </p>
+                </p> -->
             </div>
         </div>
         <div style="display: flex; justify-content: center; gap: 60px; margin-top: 60px; flex-wrap: wrap;">
@@ -226,11 +227,11 @@
         <div class="row">
             <div class="col text-center">
                 <span class="badge rounded-pill badge-soft-primary px-2 py-1">Profile</span>
-                <h1 class="display-5 fw-semibold">Our WeChat applet has a wide range of functions</h1>
-                <p class="text-muted mx-auto">
+                <h1 class="display-5 fw-semibold">Set up your personal space</h1>
+                <!-- <p class="text-muted mx-auto">
                     xxx<span class="text-primary fw-bold">
                     </span>
-                </p>
+                </p> -->
             </div>
         </div>
         <div style="display: flex; justify-content: center; gap: 60px; margin-top: 60px; flex-wrap: wrap;">
