--- a/Front-end.html
+++ b/Front-end.html
@@ -51,7 +51,10 @@
                                 <a class="nav-link" href="Back-end.html">Back-end technology</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Profit Analysis</a>
+                                <a class="nav-link" href="Business-plan.html">Business plan</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Platform-Progress.html">Platform progress</a>
                             </li>
                         </ul>
                         <!-- 下载框 -->
